# tokoya

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  __init__.py  _collider_proxy.py  _collision_warp.py  _initial_groom.py  _mask_plant.py  _mesh_ops.py  _native_loader.py  _recording.py  _sim_taichi.py  _sim_warp.py  _spiral_plant.py  _warp_kernels.py  _world_passthrough.py  _zozo_handoff.py  _zozo_mcp_client.py  blender_manifest.toml  hair_sim_defaults.json  pyproject.toml  requirements-dev.txt  tokoya_defaults.json  ui.py
cmake/: FindPhysX.cmake
native/: build.cmd  probe.cpp  setup.py
native/diag/: arm_a_b_probe.cpp  build.cmd
python/hair_sim_physx/: __init__.py  _core_loader.py  operators.py  panels.py  properties.py
scripts/: build_physx.ps1  build_wheel.ps1  install_to_blender.ps1  package_extension.ps1  setup_venv.ps1
src/: CMakeLists.txt  bindings.cpp  hair_solver.cpp  hair_solver.h
tests/: gpu_shared_benchmark.py  recording_smoke.py  test_smoke.py  warp_collision_benchmark.py
