[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "hair_sim_physx"
version = "0.0.1"
description = "NVIDIA PhysX 5 hair simulation backend for Blender 5.1"
requires-python = ">=3.13,<3.14"
authors = [{ name = "azoo" }]
license = { text = "Apache-2.0" }

[tool.scikit-build]
cmake.version = ">=3.27"
cmake.build-type = "Release"
wheel.packages = ["python/hair_sim_physx"]
wheel.py-api = "cp313"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
HAIRSIM_BUILD_PYTHON = "ON"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
testpaths = ["tests"]
